# robollm

./: .gitignore  DEVELOPMENT_LOG.md  Dockerfile  LICENSE  PROJECT_SPEC.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
envs/: __init__.py  color_pick.py  complex_language.py  move_to.py  multi_object_env.py  object_spawner.py  pick_place.py  place.py  sort.py  stack.py  tabletop.py
envs/assets/: tabletop_scene.xml
evaluation/: __init__.py  benchmark.py  compare_primitives.py  pipeline.py  record_video.py
evaluation/results/: benchmark_results.csv  benchmark_results.json  pick_training_results.json  pick_training_summary.json  primitive_comparison.json
planner/: __init__.py  grounder.py  planner.py  prompt_templates.py  task_parser.py  vlm_wrapper.py
policies/: __init__.py  networks.py  sac.py  scripted.py
tests/: conftest.py  test_envs.py  test_object_spawner.py  test_sac.py  test_task_envs.py  test_training.py  test_v104.py  test_v105.py  test_v106.py  test_v107.py  test_v108.py
training/: __init__.py  replay_buffer.py  train.py  train_pick.py
